# sheetforge-charts

./: .gitignore  BENCHMARKS.md  Cargo.toml  README.md  pyproject.toml
.cargo/: config.toml
benches/: chart_extraction.rs  mod.rs
python/sheetforge_charts/: __init__.py  __init__.pyi
src/: lib.rs  python_bindings.rs
src/archive/: mod.rs  zip_reader.rs
src/model/: axis.rs  chart.rs  color.rs  mod.rs  pivot.rs  series.rs  theme.rs  workbook.rs
src/openxml/: content_types.rs  drawing.rs  mod.rs  relationships.rs  theme_parser.rs
src/parser/: chart_parser.rs  mod.rs  pivot_cache_parser.rs  pivot_records_parser.rs  pivot_table_parser.rs  sheet_parser.rs  workbook_parser.rs
tests/: integration_test.rs
tests/fixtures/: test_charts.xlsx
