[build-system]
requires      = ["maturin>=1.4,<2"]
build-backend = "maturin"

[project]
name            = "sheetforge-charts"
version         = "0.1.0"
description     = "High-performance Excel chart metadata extractor — Rust core with Python bindings"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.8"
keywords        = ["excel", "xlsx", "charts", "metadata", "rust"]
classifiers     = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "License :: OSI Approved :: MIT License",
]

[tool.maturin]
# Enables PyO3 bindings
features      = ["python"]
# The pure-Python wrapper package lives here
python-source = "python"
# The native .pyd/.so is installed as sheetforge_charts._core
module-name   = "sheetforge_charts._core"
